--- a/package.json
+++ b/package.json
@@ -6,20 +6,40 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
+    ],
+    "automock": false,
+    "resetMocks": false,
+    "setupFiles": [
+      "./setupJest.js"
+    ]
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@reduxjs/toolkit": "^2.2.7",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "jest": "^29.4.0",
+    "jest-expo": "~51.0.4",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-test-renderer": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.6.0",
+    "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-test-renderer": "^18.3.0",
+    "fetch-mock": "^11.1.1",
+    "jest-fetch-mock": "^3.0.3",
     "typescript": "^5.1.3"
   },
   "private": true
